[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemy/bat .png" type="Texture" id=1]
[ext_resource path="res://Shadow/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Bat.gd" type="Script" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemy/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 41, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 41, 0, 41, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 41, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 123, 0, 41, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 16.3636
height = 0.0

[sub_resource type="CircleShape2D" id=9]
radius = 14.5455

[sub_resource type="CircleShape2D" id=15]
radius = 137.57

[sub_resource type="CircleShape2D" id=16]
radius = 12.7273

[node name="Bat" type="KinematicBody2D"]
position = Vector2( 0, 7 )
scale = Vector2( 0.55, 0.55 )
collision_layer = 9
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.63636, -7.27273 )
frames = SubResource( 14 )
frame = 3
playing = true

[node name="ShadowSprire" type="Sprite" parent="."]
scale = Vector2( 1.453, 1.75 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -23.6364 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -23.6364 )
shape = SubResource( 9 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.27451 )
shape = SubResource( 15 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 16 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
